--- a/public/styles.css
+++ b/public/styles.css
@@ -20,6 +20,11 @@ button:hover {
     border: 2px solid #4F33FF;
 }
 
+button#assestoverlaybutton:hover {
+    border: 2px solid #4F33FF;
+    color: #4F33FF;
+}
+
 #header {
     display: grid;
     text-align: center;
@@ -54,7 +59,6 @@ ul li {
 }
 
 .heres-how:hover {
-    color: #4F33FF;
     border: 2px solid #4F33FF;
 }
 
@@ -74,7 +78,6 @@ ul li {
 }
 
 .login-button:hover {
-    color: #4F33FF;
     border: 2px solid #4F33FF;
 }
 
@@ -140,7 +143,7 @@ ul li {
     color:whitesmoke;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 17px;
+    /* font-size: 17px; */
 }
 
 .hideNav {
@@ -591,7 +594,7 @@ select {
 #logoffForm,
 #addChildForm,
 #updateChildForm,
-#connectAssetForm,
+#uploadAssetForm,
 #addDrawerForm {
     position: absolute;
     top: 50%;
@@ -1320,7 +1323,7 @@ svg {
         overflow: scroll;
     }
 
-    #connectAssetForm {
+    #uploadAssetForm {
         height: 90%;
         overflow: scroll;
     }
